--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_SECRET=somethingsecret
 MONGODB_URI=mongodb://localhost/mern-chat-app
 mongodb+srv://mern-chat-app:mern-chat-app@cluster0.zkzj5y1.mongodb.net/?retryWrites=true&w=majority
+NODE_ENV=production
