--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "cd backend && npm install  && cd ../frontend && npm install && npm run build",
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jweb boss",
   "license": "ISC",
