--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ejioforJs/.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ejioforJs/Mern-chat-app/issues"
+  },
+  "homepage": "https://github.com/ejioforJs/Mern-chat-app#readme"
 }
